Update Week 3 for PySpark ML

--- a/SparkML/Week1_code.ipynb
+++ b/SparkML/Week1_code.ipynb
@@ -11,8 +11,8 @@
     "import pyspark\n",
     "findspark.init()\n",
     "from pyspark import SparkContext\n",
-    "sc =SparkContext()\n",
     "from pyspark.sql.session import SparkSession\n",
+    "sc =SparkContext()#SparkContext\n",
     "spark = SparkSession(sc)"
    ]
   },
@@ -22,6 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Resilient Distributed Dataset\n",
     "rdd = sc.parallelize(range(100))"
    ]
   },
@@ -356,33 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sc.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
