--- a/SparkML/Week3_code.ipynb
+++ b/SparkML/Week3_code.ipynb
@@ -451,6 +451,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
