--- a/RecSys/Collaborative-Filtering.ipynb
+++ b/RecSys/Collaborative-Filtering.ipynb
@@ -114,6 +114,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      " 90  152M   90  138M    0     0  12.0M      0  0:00:12  0:00:11  0:00:01 5067k^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "! curl -O https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/ML0101ENv3/labs/moviedataset.zip\n",
+    "print('unziping ...')\n",
+    "!unzip -o -j moviedataset.zip "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "button": false,
