--- a/Deep Learning with Pytorch/Week 1/1.3.1_simple_data_set_v2.ipynb
+++ b/Deep Learning with Pytorch/Week 1/1.3.1_simple_data_set_v2.ipynb
@@ -60,9 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x10fa488d0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# These are the libraries will be used for this lab.\n",
     "\n",
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our toy_set object:  <__main__.toy_set object at 0x1209f1110>\n",
+      "Value on index 0 of our toy_set object:  (tensor([2., 2.]), tensor([1.]))\n",
+      "Our toy_set length:  100\n"
+     ]
+    }
+   ],
    "source": [
     "# Create Dataset Object. Find out the value on index 1. Find out the length of Dataset Object.\n",
     "\n",
@@ -159,9 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index:  0 ; x: tensor([2., 2.]) ; y: tensor([1.])\n",
+      "index:  1 ; x: tensor([2., 2.]) ; y: tensor([1.])\n",
+      "index:  2 ; x: tensor([2., 2.]) ; y: tensor([1.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Use loop to print out first 3 elements in dataset\n",
     "\n",
@@ -179,9 +210,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n",
+      " x: tensor([2., 2.]) y: tensor([1.])\n"
+     ]
+    }
+   ],
    "source": [
     "for x,y in our_dataset:\n",
     "    print(' x:', x, 'y:', y)"
@@ -210,13 +348,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index:  0 ; x: tensor([2., 2.]) ; y: tensor([1.])\n",
+      "index:  1 ; x: tensor([2., 2.]) ; y: tensor([1.])\n",
+      "index:  2 ; x: tensor([2., 2.]) ; y: tensor([1.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Practice: Create a new object with length 50, and print the length of object out.\n",
     "\n",
-    "# Type your code here"
+    "# Type your code here\n",
+    "toy_set1 = toy_set(50)\n",
+    "for i in range(3):\n",
+    "    x, y=toy_set1[i]\n",
+    "    print(\"index: \", i, '; x:', x, '; y:', y)\n",
+    "    "
    ]
   },
   {
@@ -253,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +464,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  0 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  0 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  1 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  1 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  2 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  2 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  3 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  3 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  4 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  4 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  5 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  5 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  6 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  6 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  7 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  7 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  8 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  8 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  9 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  9 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Use loop to print out first 10 elements in dataset\n",
     "\n",
@@ -348,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,9 +546,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  0 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  0 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  1 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  1 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  2 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  2 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  3 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  3 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  4 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  4 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  5 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  5 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  6 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  6 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  7 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  7 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  8 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  8 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  9 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  9 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Use loop to print out first 10 elements in dataset\n",
     "\n",
@@ -395,13 +602,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  0 Transformed x_: tensor([40., 40.]) Transformed y_: tensor([30.])\n",
+      "Index:  1 Transformed x_: tensor([40., 40.]) Transformed y_: tensor([30.])\n",
+      "Index:  2 Transformed x_: tensor([40., 40.]) Transformed y_: tensor([30.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Practice: Construct your own my_add_mult transform. Apply my_add_mult on a new toy_set object. Print out the first three elements from the transformed dataset.\n",
     "\n",
-    "# Type your code here."
+    "# Type your code here.\n",
+    "class my_add_mult(object):   \n",
+    "    def __init__(self, add = 2, mul = 10):\n",
+    "        self.add=add\n",
+    "        self.mul=mul\n",
+    "        \n",
+    "    def __call__(self, sample):\n",
+    "        x = sample[0]\n",
+    "        y = sample[1]\n",
+    "        x = x + self.add\n",
+    "        y = y + self.add\n",
+    "        x = x * self.mul\n",
+    "        y = y * self.mul\n",
+    "        sample = x, y\n",
+    "        return sample\n",
+    "        \n",
+    "       \n",
+    "my_dataset = toy_set(transform = my_add_mult())\n",
+    "for i in range(3):\n",
+    "    x_, y_ = my_dataset[i]\n",
+    "    print('Index: ', i, 'Transformed x_:', x_, 'Transformed y_:', y_)"
    ]
   },
   {
@@ -457,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,9 +744,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The combination of transforms (Compose):  Compose(\n",
+      "    <__main__.add_mult object at 0x120b72310>\n",
+      "    <__main__.mult object at 0x120f46050>\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine the add_mult() and mult()\n",
     "\n",
@@ -533,18 +781,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([300., 300.]), tensor([200.]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_transform(data_set[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Transformed x_: tensor([300., 300.]) Transformed y_: tensor([200.])\n"
+     ]
+    }
+   ],
    "source": [
     "x,y=data_set[0]\n",
     "x_,y_=data_transform(data_set[0])\n",
@@ -562,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,9 +848,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  0 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  0 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  0 Compose Transformed x_co:  tensor([300., 300.]) Compose Transformed y_co:  tensor([200.])\n",
+      "Index:  1 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  1 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  1 Compose Transformed x_co:  tensor([300., 300.]) Compose Transformed y_co:  tensor([200.])\n",
+      "Index:  2 Original x:  tensor([2., 2.]) Original y:  tensor([1.])\n",
+      "Index:  2 Transformed x_: tensor([3., 3.]) Transformed y_: tensor([2.])\n",
+      "Index:  2 Compose Transformed x_co:  tensor([300., 300.]) Compose Transformed y_co:  tensor([200.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Use loop to print out first 3 elements in dataset\n",
     "\n",
@@ -618,13 +902,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  0 Transformed x_: tensor([201., 201.]) Transformed y_: tensor([200.])\n",
+      "Index:  1 Transformed x_: tensor([201., 201.]) Transformed y_: tensor([200.])\n",
+      "Index:  2 Transformed x_: tensor([201., 201.]) Transformed y_: tensor([200.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Practice: Make a compose as mult() execute first and then add_mult(). Apply the compose on toy_set dataset. Print out the first 3 elements in the transformed dataset.\n",
     "\n",
-    "# Type your code here."
+    "# Type your code here.\n",
+    "my_compose = transforms.Compose([mult(), add_mult()])\n",
+    "my_transformed_dataset = toy_set(transform = my_compose)\n",
+    "for i in range(3):\n",
+    "    x_, y_ = my_transformed_dataset[i]\n",
+    "    print('Index: ', i, 'Transformed x_:', x_, 'Transformed y_:', y_)"
    ]
   },
   {
