--- a/Deep Learning with Pytorch/Week 4/7.4one_layer_neural_network_MNIST.ipynb
+++ b/Deep Learning with Pytorch/Week 4/7.4one_layer_neural_network_MNIST.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,9 +363,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following are the parameters for the layer  1\n",
+      "The size of weights:  torch.Size([100, 784])\n",
+      "The size of bias:  torch.Size([100])\n",
+      "The following are the parameters for the layer  2\n",
+      "The size of weights:  torch.Size([10, 100])\n",
+      "The size of bias:  torch.Size([10])\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the parameters for model\n",
     "\n",
@@ -381,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +502,20 @@
    "source": [
     "# Practice: Use nn.Sequential to build the same model. Use plot_accuracy_loss to print out the accuarcy and loss\n",
     "\n",
-    "# Type your code here"
+    "# Type your code here\n",
+    "input_dim = 28 * 28\n",
+    "hidden_dim = 100\n",
+    "output_dim = 10\n",
+    "\n",
+    "model = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(input_dim, hidden_dim),\n",
+    "    torch.nn.Sigmoid(),\n",
+    "    torch.nn.Linear(hidden_dim, output_dim),\n",
+    ")\n",
+    "learning_rate = 0.01\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr = learning_rate)\n",
+    "training_results = train(model, criterion, train_loader, validation_loader, optimizer, epochs = 10)\n",
+    "plot_accuracy_loss(training_results)"
    ]
   },
   {
@@ -578,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
